--- a/team-bio.html
+++ b/team-bio.html
@@ -25,7 +25,7 @@
 		<div class="row">
 		
 			<div class="medium-4 columns left">
-				<a href="#">Close</a>
+				<a href="index.html">Close</a>
 			</div>
 			
 			<div class="medium-8 columns right">
