--- a/team-bio.html
+++ b/team-bio.html
@@ -69,12 +69,11 @@
 		
 		<div class="row">
 			
-			<div class="medium-5 large-4 large-offset-1 columns">
+			<div class="medium-5 large-4 large-offset-1 columns sidebar">
 				
 				<h5><span>Contact Brent</span></h5>
 			
-				<p>416-956-7006
-					<br>
+				<p>416-956-7006<br>
 					<a href="mailto:#">belzberg@torquest.com</a>
 				</p>
 				
