--- a/team-bio.html
+++ b/team-bio.html
@@ -4,6 +4,24 @@
 	
 <head>
 	
+	<style>
+		#preloader {
+			position: fixed;
+			left: 0;
+			top: 0;
+			z-index: 9999;
+			width: 100%;
+			height: 100%;
+			overflow: visible;
+			background-color: #333;
+			background-image: url(_assets/img/brand-tag-blk.svg);
+			-webkit-background-size: 200px 74px;
+			background-size: 200px 74px;
+			background-repeat: no-repeat;
+			background-position: center center;
+		}
+	</style>
+
 	<meta charset="utf-8">
 	
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -19,7 +37,8 @@
 
 <body>
 	
-	
+	<div id="preloader"></div>
+
 	<div class="close-bar">
 		
 		<div class="row">
@@ -134,7 +153,10 @@
 
     <script>
 	    
-
+		// preloader
+		$(window).load(function() { 
+			$("#preloader").delay(1500).fadeOut("slow"); 
+		})
 	    
 		// hamburger animation
 		function togglescroll() {
