--- a/team-bio.html
+++ b/team-bio.html
@@ -84,7 +84,7 @@
 	
 	
 
-	<div class="block block-pad-sm block-team-bio-text content light wow fadeIn" data-wow-delay=".4s">
+	<div class="block block-team-bio-text padding-4-0-4-0 content light wow fadeIn" data-wow-delay=".4s">
 		
 		<div class="row">
 			
