--- a/team-bio.html
+++ b/team-bio.html
@@ -59,7 +59,7 @@
 
 
 	
-	<div class="block block-team-bio-header content dark">
+	<div class="block team-bio-header content dark">
 		
 		<div class="row vertical-center-row">
 			
@@ -84,7 +84,7 @@
 	
 	
 
-	<div class="block block-team-bio-text padding-4-0-4-0 content light wow fadeIn" data-wow-delay=".4s">
+	<div class="block team-bio-text padding-4-0-4-0 content light wow fadeIn" data-wow-delay=".4s">
 		
 		<div class="row">
 			
