add interchange, L/M/S imgs, tidy up code

--- a/team-bio.html
+++ b/team-bio.html
@@ -102,7 +102,7 @@
 				
 				<div class="medium-5 columns">
 	
-					<img src="_assets/img/fpo-portrait-1.png" alt="Story 1">
+					<img src="_assets/img/fpo-headshot-1_(outlined).png" alt="Story 1">
 					
 				</div>
 	
@@ -186,21 +186,6 @@
 		=========================================================================================== -->
 	
 		<script src="_assets/js/min/app-min.js"></script>
-	
-	
-	
-	
-		<!-- page js
-		=========================================================================================== -->
-	
-		<script>
-		
-			// preloader
-			$(window).load(function() { 
-				$("#preloader").delay(2000).fadeOut("slow"); 
-			})
-		
-		</script>
 	
 	
 	
